src/main/metadata/objects/PhoneAreaCode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Area_Code__c</fullName>
        <label>Mobile Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Area_Code__c</fullName>
        <label>Phone Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Phone Area Codes</label>
</CustomObject>